fixing broken style

--- a/front_end/style.css
+++ b/front_end/style.css
@@ -34,8 +34,8 @@
 
       #session{
             margin-top:20px;
-        display:none;
-        padding:20px;
+            display:none;
+            padding:20px;
       }
 
       #sessionContainer{
@@ -47,7 +47,7 @@
 
       #sessionNest{
             text-align:center;
-            width:400px;
+            min-width:400px;
             padding:10px;
             background:#ddd;
             margin:auto;
